# rust_lab

./: .gitignore
ch2_gcd/: Cargo.toml
programming_rust_fast/ch06_expressions/: Cargo.toml
programming_rust_fast/ch06_expressions/ch06_01_expression_language/: Cargo.toml
programming_rust_fast/ch06_expressions/ch06_03_blocks_and_semicolons/: Cargo.toml
programming_rust_fast/ch06_expressions/ch06_04_if_and_match/: Cargo.toml
programming_rust_fast/ch06_expressions/ch06_05_if_let/: Cargo.toml
programming_rust_fast/ch06_expressions/ch06_06_loops/: Cargo.toml
programming_rust_fast/ch06_expressions/ch06_07_control_flow_in_loops/: Cargo.toml
programming_rust_fast/ch06_expressions/ch06_08_return_expression/: Cargo.toml
programming_rust_fast/ch06_expressions/ch06_10_function_and_method_call/: Cargo.toml
programming_rust_fast/ch06_expressions/ch06_11_fields_and_elements/: Cargo.toml
programming_rust_fast/ch06_expressions/ch06_12_reference_operators/: Cargo.toml
programming_rust_fast/ch06_expressions/ch06_13_arithmetic_bitwise_comparison_logical_operators/: Cargo.toml
programming_rust_fast/ch06_expressions/ch06_14_assignment/: Cargo.toml
programming_rust_fast/ch06_expressions/ch06_15_type_casts/: Cargo.toml
programming_rust_fast/ch06_expressions/ch06_16_closures/: Cargo.toml
programming_rust_fast/ch09_structs/: Cargo.toml
programming_rust_fast/ch09_structs/ch09_01_named_field_structs/: Cargo.toml
programming_rust_fast/ch09_structs/ch09_02_tuple_like_structs/: Cargo.toml
programming_rust_fast/ch09_structs/ch09_03_unit_like_structs/: Cargo.toml
programming_rust_fast/ch09_structs/ch09_04_struct_layout/: Cargo.toml
programming_rust_fast/ch09_structs/ch09_05_defining_methods_with_impl/: Cargo.toml
programming_rust_fast/ch09_structs/ch09_06_passing_self_as_smart_pointer/: Cargo.toml
programming_rust_fast/ch09_structs/ch09_07_type_associated_functions/: Cargo.toml
programming_rust_fast/ch09_structs/ch09_08_associated_consts/: Cargo.toml
programming_rust_fast/ch09_structs/ch09_09_generic_structs/: Cargo.toml
programming_rust_fast/ch09_structs/ch09_10_structs_with_lifetime_parameters/: Cargo.toml
programming_rust_fast/ch09_structs/ch09_11_deriving_common_traits_for_struct_types/: Cargo.toml
programming_rust_fast/ch09_structs/ch09_12_interior_mutability/: Cargo.toml
programming_rust_fast/ch11_trait_and_generics/ch11_05_full_qualified_method_calls/: Cargo.toml
programming_rust_fast/ch20_asynchronous_programming/: Cargo.toml
programming_rust_fast/ch20_asynchronous_programming/async_chat/: Cargo.toml
(+167 files in other folders)
