[package]
name = "ch20_asynchronous_programming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "unstable"] }
argonautica = "0.2.0"
surf = "2.3.2"
tokio = { version = "1.22.0", features = ["sync"] }
serde = { version = "1.0.149", features = ["derive", "rc"]}
serde_json = "1.0.89"